Remove List::of to make compatible with Java 8 for assignment grader